--- a/home.html
+++ b/home.html
@@ -4,7 +4,9 @@
 <body>
 
     <div>
-        <h1>Scan or type a code to continue</h1>
+        <h1 style="font-family:sans-serif; text-align: center" >
+            Scan or type a code to continue
+        </h1>
     </div>
 
 </body>
